# coverme_tree_select

./: .gitignore  CMakeLists.txt  PROJECT_FILES.md  README.md  benchmark_stats.py  path_helper.py  simple_target.c  target_input.txt
benchs/CREST_function/: foo.c
benchs/CREST_math/: foo.c
benchs/foo_int_mod/: foo.c
benchs/foo_oneInt_oneDouble/: foo.c
configs/: constants.h  path_config.py
include/: branch_tree.h  config.h  interface_for_py.h  pen.h  prepare_for_update.h  select_priority.h
output/: edges.txt  new_coverage_params.txt
src/: coverage_algorithm.py  path_helper.py
src/data_structure/: branch_tree.cpp  leaf_graph.cpp  prepare_for_update.cpp  select_priority.cpp
src/insert_module/: insert_pen.cpp  interface_for_py.cpp  pen.cpp
tests/: run_coverage_tests.py  simple_func.c  test_core.cpp  test_path_helper.py
